# maven-core

./: .dockerignore  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.example.yaml  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: api-reference.md  authentication.md  configuration.md  quickstart.md
docs/plans/: 2026-01-26-fix-durable-object-websocket-stability-plan.md  2026-01-27-feat-native-sdk-skill-loading-plan.md  2026-01-27-fix-chat-stream-response-buffering-plan.md  2026-01-28-refactor-maven-widget-skills-screen-plan.md
docs/solutions/code-quality/: oauth-implementation-improvements.md
docs/solutions/configuration-guides/: multi-backend-llm-configuration.md
docs/solutions/logic-errors/: react-async-race-conditions-and-lifecycle.md
scripts/: create-super-admin.sh  dev.sh  hash-password.ts  migrate.sh  push-agent.sh  setup-dev.sh  tenant.sh
src/maven_core/: __init__.py  agent.py  caching.py  config.py  exceptions.py  observability.py  plugins.py  rate_limiting.py
src/maven_core/auth/: __init__.py  jwt_utils.py  manager.py  oidc.py  password.py
src/maven_core/connectors/: __init__.py  loader.py  oauth.py
src/maven_core/llm/: __init__.py  base.py  claude.py  factory.py  mock.py
src/maven_core/protocols/: __init__.py  connector.py  database.py  file_store.py  kv_store.py  sandbox.py
src/maven_core/provisioning/: __init__.py  cloudflare.py  local.py  tenant.py  tiers.py
src/maven_core/rbac/: __init__.py  manager.py  schema.sql
src/maven_core/server/: __init__.py  app.py  middleware.py  routes.py
src/maven_core/sessions/: __init__.py  manager.py  storage.py
src/maven_core/skills/: __init__.py  loader.py  parser.py
tests/: conftest.py  test_caching.py  test_config.py  test_observability.py  test_rate_limiting.py
tests/test_auth/: test_jwt.py  test_password.py
tests/test_backends/: test_local_file_store.py  test_memory_kv.py  test_sqlite.py
tests/test_connectors/: test_loader.py  test_oauth.py
tests/test_provisioning/: test_sandbox.py  test_tenant.py
tests/test_rbac/: test_manager.py
tests/test_server/: test_middleware.py  test_routes.py
tests/test_sessions/: test_manager.py  test_storage.py
tests/test_skills/: test_loader.py  test_parser.py
todos/: 001-complete-p2-pkce-code-duplication.md  002-complete-p2-pkce-behavioral-inconsistency.md  003-complete-p2-missing-typed-responses.md  004-complete-p2-oauth-discovery-no-caching.md  005-complete-p2-redirect-uri-bypass.md  006-complete-p3-empty-tenantid-handling.md  007-complete-p3-info-disclosure-errors.md  008-complete-p3-missing-connector-id-validation.md
(+16 files in other folders)
